deploy/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
  labels:
    # Разрешает маршрутам из этого namespace подключаться к Gateway main
    gateway-access: "true"
